# datos-abiertos-cyl-bot

./: .gitignore  Dockerfile  LICENSE  README.md  debug_download_issue.py  debug_simple.py  docker-compose.yml  main.py  pyproject.toml  railway.json  requirements.txt  test_bold_format.py  test_catalog_export.py  test_catalogo_datos_abiertos_cyl_2025-09-07.xlsx  test_complete_flow.py  test_daily_summary.py  test_final_verification.py  test_keyboard.py  test_live_download.py  test_publisher_cleaning.py  test_publisher_removal.py  test_real_bot.py
data/: jcyl_bot.db
docs/: CNAME  _config.yml  index.html  robots.txt  script.js  style.css
src/: __init__.py
src/api/: __init__.py  client.py
src/bot/: __init__.py  handlers.py  keyboards.py  telegram_bot.py
src/models/: __init__.py  callback_map.py  database.py
src/services/: __init__.py  alerts.py  config.py  daily_summary.py  fastapi_app.py  scheduler.py
tests/: test_alerts.py  test_catalog_debug.py  test_date_format.py  test_download_debug.py  test_download_full.py  test_file_download.py  test_notifications.py  test_telegram_send.py  test_title_cleaning.py
